# EigenVersionProblem

./: CMakeLists.txt  README.md  testBoth.cxx  testNew.cxx  testOld.cxx
newEigen/: eigen.h
newLibrary/: newLibrary.cxx  newLibrary.h
oldEigen/: eigen.h
oldLibrary/: oldLibrary.cxx  oldLibrary.h
